# sysbench

./: .gitignore  Cargo.toml  README  README.md  install.sh  web.md
docs/: architecture.md  cli.md  methodology.md  packaging.md  sysinfo.md
gui/: .qmlls.ini  Cargo.toml  README.md  build.rs
gui/qml/: Card.qml  Panel.qml  RenderBench.qml  StatCard.qml  Theme.qml  main.qml
gui/src/: controller.rs  main.rs  prefs.rs
packaging/: crux-gui.desktop  gen-assets.sh
packaging/aur/: PKGBUILD
packaging/deb/: postinst  prerm
scripts/: get-server-guide.sh
src/: affinity.rs  compare.rs  history.rs  lib.rs  main.rs  summary.rs  sysinfo.rs  uninstall.rs  upload.rs
src/bench/: cpu.rs  disk.rs  mem.rs  mod.rs  net.rs
src/report/: collect.rs  format.rs  mod.rs
tester/: Cargo.toml
tester/src/: cpu.rs  disk.rs  main.rs  mem.rs  stats.rs  sysinfo.rs  upload.rs
