[package]
name = "crucible-gui"
version = "0.4.0"
edition = "2021"
description = "CRUCIBLE GUI — Qt front-end for the crux benchmark engine."
license = "GPL-3.0-or-later"
repository = "https://github.com/zsigisti/crucible"

[[bin]]
name = "crux-gui"
path = "src/main.rs"

[dependencies]
crucible = { path = ".." }
cxx = "1"
cxx-qt = "0.8"
cxx-qt-lib = { version = "0.8", features = ["qt_gui", "qt_qml"] }

[build-dependencies]
cxx-qt-build = { version = "0.8", features = ["link_qt_object_files"] }
# profiles are inherited from the workspace root
