[package]
name = "tester"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "sysbench"
path = "src/main.rs"

[dependencies]
ureq = "2.10"
sha2 = "0.10"
lz4_flex = "0.11"
core_affinity = "0.8"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
